--- a/calculator-tools.html
+++ b/calculator-tools.html
@@ -9,7 +9,7 @@
   <!-- SEO essentials -->
   <title>Free Online Calculator Tools | BMI, Loan, Percentage & More | All Tool AI</title>
   <meta name="description" content="Use All Tool AI’s fast, free calculator tools BMI, BMR, Age, Loan, Compound Interest, Scientific, Percentage, Trigonometry, Date & more. Unlimited use, no signup. 100% confidential and secure." />
-  <meta name="keywords" content="free online calculator, online calculators, BMI calculator, BMR calculator, age calculator, calorie calculator, loan calculator, compound interest calculator, percentage calculator, scientific calculator, date calculator, IP subnet calculator, math solver, algebra solver, trigonometry calculator, USA, UK, India, Canada, Australia, Indonesia, Brazil, Mexico, Germany, France, Spain, Italy, Netherlands, UAE, Saudi Arabia, Japan, Philippines, Pakistan, Nigeria, South Africa, Vietnam, Thailand, Malaysia, Singapore" />
+  <meta name="keywords" content="free online calculator, online calculators, BMI calculator, BMR calculator, age calculator, calorie calculator, loan calculator, compound interest calculator, percentage calculator, scientific calculator, date calculator, IP subnet calculator, USA, UK, India, Canada, Australia, Indonesia, Brazil, Mexico, Germany, France, Spain, Italy, Netherlands, UAE, Saudi Arabia, Japan, Philippines, Pakistan, Nigeria, South Africa, Vietnam, Thailand, Malaysia, Singapore" />
   <meta name="robots" content="index, follow, max-snippet, max-image-preview" />
 
   <!-- Open Graph -->
@@ -137,7 +137,7 @@
     "@type": "ItemList",
     "name": "Calculator Tools List",
     "itemListOrder": "Ascending",
-    "numberOfItems": 13,
+    "numberOfItems": 12,
     "itemListElement": [
       {
         "@type": "ListItem",
@@ -233,14 +233,6 @@
         "name": "Scientific Calculator",
         "url": "https://www.alltoolai.com/scientific-calculator",
         "applicationCategory": "CalculatorApplication",
-        "operatingSystem": "Web"
-      },
-      {
-        "@type": "ListItem",
-        "position": 13,
-        "name": "Trigonometry Calculator",
-        "url": "https://www.alltoolai.com/trigonometry-calculator",
-        "applicationCategory": "EducationalApplication",
         "operatingSystem": "Web"
       }
     ]
@@ -653,31 +645,6 @@
                       </div>
                       <h2 class="text-2xl font-bold mb-4">Scientific Calculator</h2>
                       <p class="text-lg">Advanced functions: exponents, roots, logs, trig, constants, and memory.</p>
-                    </a>
-                  </div>
-
-                  <div class="p-4 mx-auto bg-white rounded-lg card-glow duration-300 transition-all m-4 border border-indigo-300 dark:bg-slate-800 dark:border-slate-700">
-                    <a href="/trigonometry-calculator" aria-label="Open Trigonometry Calculator tool">
-                      <div class="grid grid-cols-2 gap-2 items-center">
-                        <div class="mx-auto w-14 h-14 my-4 rounded-full flex items-center bg-indigo-100 dark:bg-indigo-900" style="margin-right: 0%;">
-                          <svg class="mx-auto w-8 h-8 text-indigo-600 dark:text-emerald-100" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                            <path d="M14.153 8.188l-.72 -3.236a2.493 2.493 0 0 0 -4.867 0l-3.025 13.614a2 2 0 0 0 1.952 2.434h7.014a2 2 0 0 0 1.952 -2.434l-.524 -2.357m-4.935 1.791l9 -13" />
-                            <path d="M20 5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-                          </svg>
-                        </div>
-                        <div class="mx-auto w-14 h-14 my-4 rounded-full flex items-center bg-indigo-100 dark:bg-indigo-900" style="margin-left: 0%;">
-                          <svg class="mx-auto w-8 h-8 text-indigo-600 dark:text-emerald-100" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                            <path d="M4 3m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v14a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z" />
-                            <path d="M8 7m0 1a1 1 0 0 1 1 -1h6a1 1 0 0 1 1 1v1a1 1 0 0 1 -1 1h-6a1 1 0 0 1 -1 -1z" />
-                            <path d="M8 14l0 .01" /><path d="M12 14l0 .01" /><path d="M16 14l0 .01" /><path d="M8 17l0 .01" />
-                            <path d="M12 17l0 .01" /><path d="M16 17l0 .01" />
-                          </svg>
-                        </div>
-                      </div>
-                      <h2 class="text-2xl font-bold mb-4">Trigonometry Calculator</h2>
-                      <p class="text-lg">Compute sine, cosine, tangent, angles, sides, and radian degree conversions.</p>
                     </a>
                   </div>
 
