--- a/army-body-fat-calculator.html
+++ b/army-body-fat-calculator.html
@@ -358,12 +358,16 @@
             </div>
 
             <aside class="hidden lg:flex flex-col">
+              <div id="sidead-0"></div>
+              <div id="sidead-0"></div>
               <div id="sidead-1" aria-label="Sidebar Ad 1"></div>
               <div id="sidead-3" aria-label="Sidebar Ad 3"></div>
               <div id="sidead-5" aria-label="Sidebar Ad 5"></div>
             </aside>
 
             <aside class="hidden lg:flex flex-col">
+              <div id="sidead-0"></div>
+              <div id="sidead-0"></div>                
               <div id="sidead-2" aria-label="Sidebar Ad 2"></div>
               <div id="sidead-4" aria-label="Sidebar Ad 4"></div>
               <div id="sidead-6" aria-label="Sidebar Ad 6"></div>
@@ -383,18 +387,16 @@
               <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/calorie-calculator">Calorie Calculator</a>,
               <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/bmi-calculator">BMI Calculator</a>,
               <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/army-body-fat-calculator">Army Body Fat Calculator</a>,
-              <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/bmr-calculator">BMR Calculator</a>,
+              <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/bmr-tdee-macro-calculator">BMR, TDEE & Macro Calculator Calculator</a>,
               <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/compound-interest-calculator">Compound Interest Calculator</a>,
               <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/loan-calculator">Loan Calculator</a>,
               <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/date-calculator">Date Calculator</a>,
               <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/ip-subnet-calculator">IP Subnet Calculator</a>,
               <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/percentage-calculator">Percentage Calculator</a>,
               <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/scientific-calculator">Scientific Calculator</a>,
-              <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/math-equation-solver">Math Equation Solver</a>,
-              <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/algebra-solver">Algebra Solver</a>,
               <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/trigonometry-calculator">Trigonometry Calculator</a>.
            </p>
-        </section>        
+        </section>
 
     </div>
 </main>
