--- a/age-calculator.html
+++ b/age-calculator.html
@@ -164,20 +164,21 @@
   <meta name="apple-mobile-web-app-title" content="All Tool Ai" />
   <link rel="manifest" href="/assets/icon/site.webmanifest" />
 
-  <!-- 1) Preconnect for Google Fonts -->
+  <!-- Preconnect for Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-  <!-- 2) Non-blocking load for Google Fonts stylesheet -->
+  <!-- Non-blocking load for Google Fonts stylesheet -->
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" media="print" onload="this.media='all'" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" />
     
-  <!-- 3) Non-blocking load for your Tailwind build -->
+  <!-- Non-blocking load for your Tailwind build -->
   <link rel="preload" href="/assets/style/style.css" as="style" />
   <link rel="stylesheet" href="/assets/style/style.css" media="print" onload="this.media='all'" />
   <link rel="stylesheet" href="/assets/style/style.css" />
 
+  <!-- Pre-connect for JS -->
   <script src="/assets/js/header.js" defer></script>
   <script src="/assets/calculator/calculator-ft.js" defer></script>
   <script src="/assets/js/main.js" defer></script>
