--- a/fertilizer-calculator.html
+++ b/fertilizer-calculator.html
@@ -524,7 +524,7 @@
 
             <aside class="hidden lg:flex flex-col">
               <div id="sidead-0"></div>
-              <div id="sidead-0"></div>                
+              <div id="sidead-0"></div>
               <div id="sidead-2" aria-label="Sidebar Ad 2"></div>
               <div id="sidead-4" aria-label="Sidebar Ad 4"></div>
               <div id="sidead-6" aria-label="Sidebar Ad 6"></div>
@@ -550,8 +550,7 @@
               <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/date-calculator">Date Calculator</a>,
               <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/ip-subnet-calculator">IP Subnet Calculator</a>,
               <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/percentage-calculator">Percentage Calculator</a>,
-              <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/scientific-calculator">Scientific Calculator</a>,
-              <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/trigonometry-calculator">Trigonometry Calculator</a>.
+              <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/scientific-calculator">Scientific Calculator</a>.
            </p>
         </section>
 
