--- a/army-body-fat-calculator.html
+++ b/army-body-fat-calculator.html
@@ -49,7 +49,8 @@
   <link rel="preload" href="/assets/style/style.css" as="style" />
   <link rel="stylesheet" href="/assets/style/style.css" media="print" onload="this.media='all'" />
   <link rel="stylesheet" href="/assets/style/style.css" />
-    
+
+  <!-- Pre-connect for JS -->
   <script src="/assets/js/header.js" defer></script>
   <script src="/assets/calculator/calculator-ft.js" defer></script>
   <script src="/assets/js/main.js" defer></script>
@@ -367,7 +368,7 @@
 
             <aside class="hidden lg:flex flex-col">
               <div id="sidead-0"></div>
-              <div id="sidead-0"></div>                
+              <div id="sidead-0"></div>
               <div id="sidead-2" aria-label="Sidebar Ad 2"></div>
               <div id="sidead-4" aria-label="Sidebar Ad 4"></div>
               <div id="sidead-6" aria-label="Sidebar Ad 6"></div>
@@ -393,8 +394,7 @@
               <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/date-calculator">Date Calculator</a>,
               <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/ip-subnet-calculator">IP Subnet Calculator</a>,
               <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/percentage-calculator">Percentage Calculator</a>,
-              <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/scientific-calculator">Scientific Calculator</a>,
-              <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/trigonometry-calculator">Trigonometry Calculator</a>.
+              <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/scientific-calculator">Scientific Calculator</a>.
            </p>
         </section>
 
