--- a/calculator-tools.html
+++ b/calculator-tools.html
@@ -468,7 +468,7 @@
                   </div>
 
                   <div class="p-4 mx-auto bg-white rounded-lg card-glow duration-300 transition-all m-4 border border-indigo-300 dark:bg-slate-800 dark:border-slate-700">
-                    <a href="/bmr-tdee-macro-calculator" aria-label="Open BMR Calculator tool">
+                    <a href="/bmr-tdee-macro-calculator" aria-label="Open BMR, TDEE & MACRO Calculator tool">
                       <div class="grid grid-cols-2 gap-2 items-center">
                         <div class="mx-auto w-14 h-14 my-4 rounded-full flex items-center bg-indigo-100 dark:bg-indigo-900" style="margin-right: 0%;">
                           <svg viewBox="0 0 1186.776 1186.776" class="mx-auto w-8 h-8 text-indigo-600 dark:text-emerald-100" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" >
