--- a/age-calculator.html
+++ b/age-calculator.html
@@ -178,7 +178,7 @@
   <link rel="stylesheet" href="/assets/style/style.css" media="print" onload="this.media='all'" />
   <link rel="stylesheet" href="/assets/style/style.css" />
 
-  <!-- Pre-connect for JS -->
+  <!-- Preconnect for JS -->
   <script src="/assets/js/header.js" defer></script>
   <script src="/assets/calculator/calculator-ft.js" defer></script>
   <script src="/assets/js/main.js" defer></script>
