--- a/text-tools.html
+++ b/text-tools.html
@@ -113,7 +113,7 @@
       "name": "All Tool AI",
       "url": "https://www.alltoolai.com/"
     },
-    "description": "Lifetime free access to All Tool AI’s full suite of AI-powered tools — no registration or payment required."
+    "description": "Lifetime free access to All Tool AI’s full suite of AI-powered tools no registration or payment required."
   }
   </script>
   <script type="application/ld+json">
@@ -256,7 +256,7 @@
   <!-- 3) Non-blocking load for your Tailwind build -->
   <link rel="preload" href="/assets/style/style.css" as="style" />
   <link rel="stylesheet" href="/assets/style/style.css" media="print" onload="this.media='all'" />
-  <link rel="stylesheet" href="/assets/style/style.css" />
+  <link rel="stylesheet" href="./assets/style/style.css" />
     
   <script src="/assets/js/header.js" defer></script>
   <script src="/assets/text/text-ft.js" defer></script>
@@ -272,8 +272,12 @@
     <div class="p-4 sm:p-6 mt-16 mx-auto">
 
       <div class="text-center mt-8 mb-4">
-        <h1 class="p-4 text-4xl md:text-5xl lg:text-6xl font-extrabold bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 bg-clip-text text-transparent">Free Online Text Tools Text to PDF/HTML/Code, Analyzer & Formatter</h1>
-        <p class="p-2 text-xl max-w-2xl mx-auto text-slate-600 dark:text-slate-400">Top, fast, best, and lifetime free unlimited. Convert text to PDF or HTML, turn text ↔ code, analyze word/character counts, and format text no signup. Your information is 100% confidential and secure.</p>
+        <h1 class="p-4 text-4xl md:text-5xl lg:text-6xl font-extrabold bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 bg-clip-text text-transparent">
+          Free Online Text Tools Text to PDF/HTML/Code, Analyzer & Formatter
+        </h1>
+        <p class="p-2 text-xl max-w-2xl mx-auto text-slate-600 dark:text-slate-400">
+          Top, fast, best, and lifetime free unlimited. Convert text to PDF or HTML, turn text ↔ code, analyze word/character counts, and format text no signup. Your information is 100% confidential and secure.
+        </p>
       </div>
 
         <!-- START: Top Horizontal Ad Section -->
@@ -315,7 +319,9 @@
                       </div>
 
                       <h2 class="text-2xl font-bold mb-4">Text to PDF</h2>
-                      <p class="text-base">Convert text to a clean, shareable PDF in seconds. Supports page size (A4/Letter), orientation, margins, fonts, and characters.</p>
+                      <p class="text-base">
+                        Convert text to a clean, shareable PDF in seconds. Supports page size (A4/Letter), orientation, margins, fonts, and characters.
+                      </p>
                     </a>
                   </div>
 
@@ -346,7 +352,9 @@
                       </div>
 
                       <h2 class="text-2xl font-bold mb-4">Html to Text</h2>
-                      <p class="text-base">Turn plain text into clean, semantic HTML. Supports headings, paragraphs, line breaks, lists, links, and code blocks.</p>
+                      <p class="text-base">
+                        Turn plain text into clean, semantic HTML. Supports headings, paragraphs, line breaks, lists, links, and code blocks.
+                      </p>
                     </a>
                   </div>
 
@@ -376,7 +384,9 @@
                       </div>
 
                       <h2 class="text-2xl font-bold mb-4">Text to Code</br>Code to Text</h2>
-                      <p class="text-base">Effortlessly translate plain text into binary, hexadecimal, decimal, and octal code or convert them back again.</p>
+                      <p class="text-base">
+                        Effortlessly translate plain text into binary, hexadecimal, decimal, and octal code or convert them back again.
+                      </p>
                     </a>
                   </div>
 
@@ -399,7 +409,9 @@
                         </div>                        
                       </div>
                       <h2 class="text-2xl font-bold mb-4">Text Analyzer</h2>
-                      <p class="text-base">Analyze text instantly for length and clarity. Supports word/character counts, sentences/paragraphs, reading time, and readability scores (Flesch Kincaid).</p>
+                      <p class="text-base">
+                        Analyze text instantly for length and clarity. Supports word/character counts, sentences/paragraphs, reading time, and readability scores (Flesch Kincaid).
+                      </p>
                     </a>
                   </div>
 
@@ -422,7 +434,9 @@
                         </div>                        
                       </div>
                       <h2 class="text-2xl font-bold mb-4">Text Formatter</h2>
-                      <p class="text-base">Clean and format text in one click. Supports case conversion (UPPER/lower/Title), removing extra spaces/line breaks, trimming, deduping lines, and URL slugging..</p>
+                      <p class="text-base">
+                        Clean and format text in one click. Supports case conversion (UPPER/lower/Title), removing extra spaces/line breaks, trimming, deduping lines, and URL slugging..
+                      </p>
                     </a>
                   </div>
 
@@ -437,7 +451,7 @@
 
                 <section class="mx-auto text-slate-800 dark:text-slate-200 max-w-4xl">
                   <h2 class="text-3xl font-bold mb-4 text-center">Free PDF tools for everyone, everywhere</h2>
-                  <p class="text-base mb-4">
+                    <p class="text-base mb-4">
                       Convert, analyze, and format text in your browser no signup, unlimited use, privacy first.
                     </p>
 
