--- a/html-to-text.html
+++ b/html-to-text.html
@@ -213,8 +213,7 @@
                                 rows="10" 
                                 placeholder="<p>Paste your <strong>HTML</strong> code here...</p>" 
                                 spellcheck="false"
-                                class="block w-full rounded-md border-0 p-3 bg-slate-200 dark:bg-slate-700 text-slate-900 dark:text-slate-100 resize-y font-mono text-base">
-                            </textarea>
+                                class="block w-full rounded-md border-0 p-3 bg-slate-200 dark:bg-slate-700 text-slate-900 dark:text-slate-100 resize-y font-mono text-base"></textarea>
                         </div>
 
                         <!-- Convert button -->
