--- a/audio-tools.html
+++ b/audio-tools.html
@@ -17,14 +17,12 @@
   <meta property="og:description" content="Top, fast, best, and lifetime free. Convert video to MP3/WAV, MP3↔WAV, and cut audio online. Unlimited, no sign up, 100% private." />
   <meta property="og:url" content="https://www.alltoolai.com/audio-tools" />
   <meta property="og:site_name" content="All Tool AI" />
-  <meta property="og:image" content="https://www.alltoolai.com/assets/og/audio-tools-og.png" />
   <meta property="og:locale" content="en_US" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Free Online Audio Tools Video to MP3/WAV, MP3 to WAV, WAV to MP3, Audio Cutter" />
   <meta name="twitter:description" content="Lifetime free and unlimited. No sign up. 100% confidential and secure." />
-  <meta name="twitter:image" content="https://www.alltoolai.com/assets/og/audio-tools-og.png" />
 
   <!-- Hreflang: keep only if pages exist. For now, x-default and en are safe -->
   <link rel="alternate" href="https://www.alltoolai.com/audio-tools" hreflang="x-default">
@@ -70,7 +68,7 @@
     "@type": "CollectionPage",
     "url": "https://www.alltoolai.com/audio-tools",
     "name": "Free Online Audio Tools | All Tool AI",
-    "headline": "Free Online Audio Tools – Convert, Cut, and Edit Audio Files Instantly",
+    "headline": "Free Online Audio Tools Convert, Cut, and Edit Audio Files Instantly",
     "description": "All Tool AI offers free online audio tools to convert and edit audio: video to MP3/WAV, MP3↔WAV conversion, and audio cutting directly in your browser. Fast, secure, and privacy-first.",
     "inLanguage": "en",
     "isPartOf": {
