--- a/html-to-text.html
+++ b/html-to-text.html
@@ -8,7 +8,6 @@
 
   <!-- Optimized Title for Click-Through Rate and Keywords -->
   <title>Best HTML to Text Converter | Strip Tags Online (Free, Private & Unlimited)</title>
-  
   <!-- Optimized Description for SEO & AEO -->
   <meta name="description" content="Instantly convert HTML to plain text. The best free tool to strip HTML tags, preserve formatting, and clean code. 100% private, unlimited, and fast. Perfect for converting email templates and extracting text.">
   <meta name="keywords" content="HTML to Text, HTML to Text Converter, Convert HTML to Text, Convert HTML to Plain Text, Strip HTML Tags, Remove HTML Tags Online, HTML Tag Remover, HTML to TXT, Extract Text from HTML, HTML Text Extractor, Plain Text from HTML, Clean HTML to Text, HTML to Text Online, Free HTML to Text, convert text file to html, convert text document to html, convert rich text to html, convert text to html with formatting, convert html text to plain text, c# convert html to plain text, convert html email to plain text, text to html converter, convert text to html, Client-Side Converter, Preserve Line Breaks, Remove CSS and Scripts, Secure and Private, Fast Converter, Download TXT, No Signup, All Tool AI">
@@ -87,6 +86,34 @@
     }
   }
   </script>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Text Tools",
+        "item": "https://www.alltoolai.com/text-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Html To Text",
+        "item": "https://www.alltoolai.com/html-to-text"
+      }
+    ]
+  }
+  </script>
+
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
