--- a/text-to-pdf.html
+++ b/text-to-pdf.html
@@ -46,7 +46,26 @@
     }
   }
   </script>
-
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Free Text to PDF Converter (No Upload)",
+    "url": "https://www.alltoolai.com/text-to-pdf",
+    "description": "Convert plain text, notes, or code into a professional PDF instantly. 100% private, fast, and free text to PDF converter with customizable page size, orientation, and font options.",
+    "headline": "Free Text to PDF Converter | Online, Fast & Private",
+    "isAccessibleForFree": true,
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/text-to-pdf"
+    },
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/pdf-tools"
+    }
+  }
+  </script>
   <!-- Schema.org - Software/Tool -->
   <script type="application/ld+json">
   {
@@ -72,7 +91,32 @@
     ]
   }
   </script>
-
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Text Tools",
+        "item": "https://www.alltoolai.com/text-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Text to PDF",
+        "item": "https://www.alltoolai.com/text-to-pdf"
+      }
+    ]
+  }
+  </script>
   <!-- Schema.org - HowTo (AEO Optimized for Voice Search) -->
   <script type="application/ld+json">
   {
