--- a/text-to-code.html
+++ b/text-to-code.html
@@ -98,6 +98,32 @@
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Text Tools",
+        "item": "https://www.alltoolai.com/text-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Text to Code",
+        "item": "https://www.alltoolai.com/text-to-code"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
     "@type": "FAQPage",
     "mainEntity": [
       {
