--- a/mp3-to-wav-converter.html
+++ b/mp3-to-wav-converter.html
@@ -115,8 +115,8 @@
       {
         "@type": "ListItem",
         "position": 3,
-        "name": "Video to WAV Converter",
-        "item": "https://www.alltoolai.com/video-to-wav-converter"
+        "name": "MP3 to WAV Converter",
+        "item": "https://www.alltoolai.com/mp3-to-wav-converter"
       }
     ]
   }
